# voice-assistant-agent

./: .gitignore  README.md  bot.py  env.example  pyproject.toml
my-pipecat-client/: index.html  package-lock.json  package.json
my-pipecat-client/src/: App.jsx  index.css
