[project]
name = "voice-agent"
version = "0.1.0"
description = "take-home made for voice agent task"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,silero,deepgram,openai,cartesia,local-smart-turn-v3,runner,google,whisper,mem0]",
    "pipecat-ai-cli",
    "tavily-python>=0.3.8,<1",
    "requests>=2.32,<3"
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]